Plagiarism Detection Model code and data

--- a/PlagiarismDetection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/PlagiarismDetection/2_Plagiarism_Feature_Engineering.ipynb
@@ -85,31 +85,31 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>g0pA_taska.txt</td>\n",
        "      <td>a</td>\n",
        "      <td>non</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>g0pA_taskb.txt</td>\n",
        "      <td>b</td>\n",
        "      <td>cut</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>g0pA_taskc.txt</td>\n",
        "      <td>c</td>\n",
        "      <td>light</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>g0pA_taskd.txt</td>\n",
        "      <td>d</td>\n",
        "      <td>heavy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>g0pA_taske.txt</td>\n",
        "      <td>e</td>\n",
        "      <td>non</td>\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,57 +239,7 @@
       "2   g0pA_taskc.txt    c         2      1\n",
       "3   g0pA_taskd.txt    d         1      1\n",
       "4   g0pA_taske.txt    e         0      0\n",
-      "5   g0pB_taska.txt    a         0      0\n",
-      "6   g0pB_taskb.txt    b         0      0\n",
-      "7   g0pB_taskc.txt    c         3      1\n",
-      "8   g0pB_taskd.txt    d         2      1\n",
-      "9   g0pB_taske.txt    e         1      1\n",
-      "10  g0pC_taska.txt    a         1      1\n",
-      "11  g0pC_taskb.txt    b         0      0\n",
-      "12  g0pC_taskc.txt    c         0      0\n",
-      "13  g0pC_taskd.txt    d         3      1\n",
-      "14  g0pC_taske.txt    e         2      1\n",
-      "15  g0pD_taska.txt    a         3      1\n",
-      "16  g0pD_taskb.txt    b         2      1\n",
-      "17  g0pD_taskc.txt    c         1      1\n",
-      "18  g0pD_taskd.txt    d         0      0\n",
-      "19  g0pD_taske.txt    e         0      0\n",
-      "20  g0pE_taska.txt    a         2      1\n",
-      "21  g0pE_taskb.txt    b         1      1\n",
-      "22  g0pE_taskc.txt    c         0      0\n",
-      "23  g0pE_taskd.txt    d         0      0\n",
-      "24  g0pE_taske.txt    e         3      1\n",
-      "25  g1pA_taska.txt    a         0      0\n",
-      "26  g1pA_taskb.txt    b         1      1\n",
-      "27  g1pA_taskc.txt    c         2      1\n",
-      "28  g1pA_taskd.txt    d         3      1\n",
-      "29  g1pA_taske.txt    e         0      0\n",
       "..             ...  ...       ...    ...\n",
-      "70  g3pC_taska.txt    a         3      1\n",
-      "71  g3pC_taskb.txt    b         0      0\n",
-      "72  g3pC_taskc.txt    c         0      0\n",
-      "73  g3pC_taskd.txt    d         1      1\n",
-      "74  g3pC_taske.txt    e         2      1\n",
-      "75  g4pB_taska.txt    a         0      0\n",
-      "76  g4pB_taskb.txt    b         0      0\n",
-      "77  g4pB_taskc.txt    c         1      1\n",
-      "78  g4pB_taskd.txt    d         2      1\n",
-      "79  g4pB_taske.txt    e         3      1\n",
-      "80  g4pC_taska.txt    a         3      1\n",
-      "81  g4pC_taskb.txt    b         0      0\n",
-      "82  g4pC_taskc.txt    c         0      0\n",
-      "83  g4pC_taskd.txt    d         1      1\n",
-      "84  g4pC_taske.txt    e         2      1\n",
-      "85  g4pD_taska.txt    a         2      1\n",
-      "86  g4pD_taskb.txt    b         3      1\n",
-      "87  g4pD_taskc.txt    c         0      0\n",
-      "88  g4pD_taskd.txt    d         0      0\n",
-      "89  g4pD_taske.txt    e         1      1\n",
-      "90  g4pE_taska.txt    a         1      1\n",
-      "91  g4pE_taskb.txt    b         2      1\n",
-      "92  g4pE_taskc.txt    c         3      1\n",
-      "93  g4pE_taskd.txt    d         0      0\n",
-      "94  g4pE_taske.txt    e         0      0\n",
       "95  orig_taska.txt    a        -1     -1\n",
       "96  orig_taskb.txt    b        -1     -1\n",
       "97  orig_taskc.txt    c        -1     -1\n",
@@ -328,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +311,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>g0pA_taska.txt</td>\n",
        "      <td>a</td>\n",
        "      <td>0</td>\n",
@@ -369,7 +319,7 @@
        "      <td>inheritance is a basic concept of object orien...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>g0pA_taskb.txt</td>\n",
        "      <td>b</td>\n",
        "      <td>3</td>\n",
@@ -377,7 +327,7 @@
        "      <td>pagerank is a link analysis algorithm used by ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>g0pA_taskc.txt</td>\n",
        "      <td>c</td>\n",
        "      <td>2</td>\n",
@@ -385,7 +335,7 @@
        "      <td>the vector space model also called term vector...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>g0pA_taskd.txt</td>\n",
        "      <td>d</td>\n",
        "      <td>1</td>\n",
@@ -393,7 +343,7 @@
        "      <td>bayes theorem was names after rev thomas bayes...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>g0pA_taske.txt</td>\n",
        "      <td>e</td>\n",
        "      <td>0</td>\n",
@@ -420,7 +370,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +458,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>g0pA_taska.txt</td>\n",
        "      <td>a</td>\n",
        "      <td>0</td>\n",
@@ -517,7 +467,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>g0pA_taskb.txt</td>\n",
        "      <td>b</td>\n",
        "      <td>3</td>\n",
@@ -526,7 +476,7 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>g0pA_taskc.txt</td>\n",
        "      <td>c</td>\n",
        "      <td>2</td>\n",
@@ -535,7 +485,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>g0pA_taskd.txt</td>\n",
        "      <td>d</td>\n",
        "      <td>1</td>\n",
@@ -544,7 +494,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>g0pA_taske.txt</td>\n",
        "      <td>e</td>\n",
        "      <td>0</td>\n",
@@ -553,7 +503,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>g0pB_taska.txt</td>\n",
        "      <td>a</td>\n",
        "      <td>0</td>\n",
@@ -562,7 +512,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>g0pB_taskb.txt</td>\n",
        "      <td>b</td>\n",
        "      <td>0</td>\n",
@@ -571,7 +521,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>g0pB_taskc.txt</td>\n",
        "      <td>c</td>\n",
        "      <td>3</td>\n",
@@ -580,7 +530,7 @@
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>g0pB_taskd.txt</td>\n",
        "      <td>d</td>\n",
        "      <td>2</td>\n",
@@ -589,7 +539,7 @@
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>g0pB_taske.txt</td>\n",
        "      <td>e</td>\n",
        "      <td>1</td>\n",
@@ -627,7 +577,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a features DataFrame by selecting an `ngram_range`\n",
+    "### Create a features DataFrame by selecting an `ngram_range`\n",
     "\n",
     "The paper suggests calculating the following features: containment *1-gram to 5-gram* and *longest common subsequence*. \n",
     "> In this exercise, you can choose to create even more features, for example from *1-gram to 7-gram* containment features and *longest common subsequence*. \n",
@@ -1059,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1149,7 +1099,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.398148</td>\n",
        "      <td>0.079070</td>\n",
        "      <td>0.009346</td>\n",
@@ -1159,7 +1109,7 @@
        "      <td>0.191781</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.984694</td>\n",
        "      <td>0.964103</td>\n",
@@ -1169,7 +1119,7 @@
        "      <td>0.820755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0.869369</td>\n",
        "      <td>0.719457</td>\n",
        "      <td>0.613636</td>\n",
@@ -1179,7 +1129,7 @@
        "      <td>0.846491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0.593583</td>\n",
        "      <td>0.268817</td>\n",
        "      <td>0.156757</td>\n",
@@ -1189,7 +1139,7 @@
        "      <td>0.316062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0.544503</td>\n",
        "      <td>0.115789</td>\n",
        "      <td>0.031746</td>\n",
@@ -1199,7 +1149,7 @@
        "      <td>0.242574</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>0.329502</td>\n",
        "      <td>0.053846</td>\n",
        "      <td>0.007722</td>\n",
@@ -1209,7 +1159,7 @@
        "      <td>0.161172</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>0.590308</td>\n",
        "      <td>0.150442</td>\n",
        "      <td>0.035556</td>\n",
@@ -1219,7 +1169,7 @@
        "      <td>0.301653</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>0.765306</td>\n",
        "      <td>0.709898</td>\n",
        "      <td>0.664384</td>\n",
@@ -1229,7 +1179,7 @@
        "      <td>0.621711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>0.759777</td>\n",
        "      <td>0.505618</td>\n",
        "      <td>0.395480</td>\n",
@@ -1239,7 +1189,7 @@
        "      <td>0.484305</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>0.884444</td>\n",
        "      <td>0.526786</td>\n",
        "      <td>0.340807</td>\n",
@@ -1266,7 +1216,7 @@
        "9  0.884444  0.526786  0.340807  0.247748  0.180995  0.150000  0.597458"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1276,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>c_1</th>\n",
+       "      <td>c_1</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.94</td>\n",
        "      <td>0.90</td>\n",
@@ -1336,7 +1286,7 @@
        "      <td>0.97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c_2</th>\n",
+       "      <td>c_2</td>\n",
        "      <td>0.94</td>\n",
        "      <td>1.00</td>\n",
        "      <td>0.99</td>\n",
@@ -1346,7 +1296,7 @@
        "      <td>0.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c_3</th>\n",
+       "      <td>c_3</td>\n",
        "      <td>0.90</td>\n",
        "      <td>0.99</td>\n",
        "      <td>1.00</td>\n",
@@ -1356,7 +1306,7 @@
        "      <td>0.97</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c_4</th>\n",
+       "      <td>c_4</td>\n",
        "      <td>0.89</td>\n",
        "      <td>0.98</td>\n",
        "      <td>1.00</td>\n",
@@ -1366,7 +1316,7 @@
        "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c_5</th>\n",
+       "      <td>c_5</td>\n",
        "      <td>0.88</td>\n",
        "      <td>0.97</td>\n",
        "      <td>0.99</td>\n",
@@ -1376,7 +1326,7 @@
        "      <td>0.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>c_6</th>\n",
+       "      <td>c_6</td>\n",
        "      <td>0.87</td>\n",
        "      <td>0.96</td>\n",
        "      <td>0.98</td>\n",
@@ -1386,7 +1336,7 @@
        "      <td>0.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>lcs_word</th>\n",
+       "      <td>lcs_word</td>\n",
        "      <td>0.97</td>\n",
        "      <td>0.98</td>\n",
        "      <td>0.97</td>\n",
@@ -1444,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1551,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -1600,6 +1550,13 @@
     "make_csv(train_x, train_y, filename='train.csv', data_dir=data_dir)\n",
     "make_csv(test_x, test_y, filename='test.csv', data_dir=data_dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
